syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/gufir/money-management/pb";

// Request message for creating a user
message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}
